TX-480 Fix the display of metadata-inline on mobile

--- a/health/sass/components/@health/_health-field.scss
+++ b/health/sass/components/@health/_health-field.scss
@@ -26,9 +26,10 @@
 
   &--inline {
 
-    .field + &,
-    & + .field {
-      @include AU-space(margin-top, .5unit);
+    @include AU-space(margin-top, .5unit);
+
+    .field {
+      @include AU-space(margin-top, 0);
     }
 
     > div, > span {
